# LogATE

./: .gitignore  .travis.yml  CMakeLists.txt  FAQ.md  LICENSE  README.md  TODO.md  build_image  release_notes.md  sdk
ci/: .build  .run_all  build  run_all  run_basic
data/: array_flat.json  array_nested.json  array_objects.json  simple.json  subobjects.json
docker/runtime/: .gitignore  Dockerfile
docker/sdk/: Dockerfile
scripts/: cursate  cursate_install_on_powerstation  cursate_make_rpm  cursate_pipe_logs  generate_logs_full_speed  generate_logs_slowly  logate.spec  logs_gen  preprocess_pas_logs
src/: CMakeLists.txt
src/CursATE/: CMakeLists.txt  Config.hpp  LogDataSource.cpp  LogDataSource.hpp  LogDataSource.ut.cpp  Main.cpp  Main.hpp  TODO.md  extractConfig.cpp  extractConfig.hpp  main.cpp
src/CursATE/Curses/: Change.hpp  Color.hpp  ColorGuard.cpp  ColorGuard.hpp  CursorVisibility.cpp  CursorVisibility.hpp  DataSource.cpp  DataSource.hpp  Exception.hpp  FieldSize.hpp  Form.hpp  Init.cpp  Init.hpp  ScreenPosition.hpp  ScreenSize.hpp  ScrolableWindow.cpp  ScrolableWindow.hpp  TestPrints.ut.hpp  Window.cpp  Window.hpp  ctrl.hpp  form_window.manual.cpp  getChar.cpp  getChar.hpp  getChar.manual.cpp  hello_world.manual.cpp  new_scrolable_window.manual.cpp  new_window.manual.cpp  screen_size_monitor.manual.cpp  show_new_window.manual.cpp
src/CursATE/Curses/Field/: Button.cpp  Button.hpp  Change.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  Radio.cpp  Radio.hpp
src/CursATE/Curses/Field/detail/: resizePadded.cpp  resizePadded.hpp  resizePadded.ut.cpp
src/CursATE/Curses/detail/: ScrolableWindowBackend.cpp  ScrolableWindowBackend.hpp  ScrolableWindowBackend.ut.cpp  StringDataSource.ut.hpp  TupleForEach.hpp  TupleVisitor.hpp
src/CursATE/Screen/: FilterTree.cpp  FilterTree.hpp  LogEntry.cpp  LogEntry.hpp  LogEntry.manual.cpp  LogList.cpp  LogList.hpp  ProgressBar.cpp  ProgressBar.hpp  Search.cpp  Search.hpp  TODO.md  displayError.cpp  displayError.hpp  displayError.manual.cpp  help.cpp  help.hpp  help.manual.cpp  multiLinePreview.cpp  multiLinePreview.hpp  multiLinePreview.manual.cpp
src/CursATE/Screen/LogDisplay/: OrderedPrettyPrint.cpp  OrderedPrettyPrint.hpp  OrderedPrettyPrint.ut.cpp  jsonLine.cpp  jsonLine.hpp  jsonLine.ut.cpp
src/CursATE/Screen/detail/: ConstStringDataSource.cpp  ConstStringDataSource.hpp  FilterTreeDataSource.cpp  FilterTreeDataSource.hpp  FilterWindows.cpp  FilterWindows.hpp  LogDataSource.cpp  LogDataSource.hpp  LogDataSource.ut.cpp  LogEntryDataSource.cpp  LogEntryDataSource.hpp  LogIdIndexCache.cpp  LogIdIndexCache.hpp  LogIdIndexCache.ut.cpp  Marks.cpp  Marks.hpp  Marks.ut.cpp  formatAsPercentage.cpp  formatAsPercentage.hpp  formatAsPercentage.ut.cpp  id2key.cpp  id2key.hpp  id2key.ut.cpp  regexEscape.cpp  regexEscape.hpp  regexEscape.ut.cpp  smallerScreenSize.hpp  splitIntoLines.cpp  splitIntoLines.hpp  splitIntoLines.ut.cpp
src/CursATE/detail/: FilterWindows.cpp  FilterWindows.hpp  LogDataSource.cpp  LogDataSource.hpp  LogDataSource.ut.cpp
src/LogATE/: CMakeLists.txt  Log.cpp  Log.hpp  Log.ut.cpp  SequenceNumber.cpp  SequenceNumber.hpp  TestHelpers.ut.hpp  TestPrints.ut.hpp  placeholder.cpp  placeholder.hpp  placeholder.it.cpp  placeholder.mt.cpp  placeholder.ut.cpp
src/LogATE/Json/: README.md  Selector.cpp  Selector.hpp  Selector.manual.cpp  Selector.ut.cpp
src/LogATE/Net/: Exception.hpp  Port.hpp  Server.hpp  Socket.cpp  Socket.hpp  Socket.it.cpp  SocketDescriptorPair.cpp  SocketDescriptorPair.hpp  SocketDescriptorPair.ut.cpp  TcpClient.cpp  TcpClient.hpp  TcpClient.manual.cpp  TcpJsonPerformanceTest.manual.cpp  TcpRawClient.cpp  TcpRawClient.hpp  TcpServer.cpp  TcpServer.hpp  TcpServer.it.cpp  TcpServer.manual.cpp  epoll.cpp  epoll.hpp  epoll.ut.cpp
src/LogATE/Net/detail/: TcpServerImpl.cpp  TcpServerImpl.hpp  WaitResult.hpp  helpers.hpp
src/LogATE/Printers/: OrderedPrettyPrint.cpp  OrderedPrettyPrint.hpp  OrderedPrettyPrint.ut.cpp  TODO.md  jsonLine.cpp  jsonLine.hpp  jsonLine.ut.cpp
src/LogATE/Printers/detail/: maxDigits.hpp  maxDigits.ut.cpp
src/LogATE/Tree/: FilterFactory.cpp  FilterFactory.hpp  FilterFactory.ut.cpp  KeyExtractor.cpp  KeyExtractor.hpp  KeyExtractor.ut.cpp  Logs.cpp  Logs.hpp  Logs.ut.cpp  Name.hpp  Node.cpp  Node.hpp  Node.ut.cpp  NodeName.hpp  NodeType.hpp  Path.cpp  Path.hpp  Path.ut.cpp  Search.cpp  Search.hpp  Search.ut.cpp  SimpleNode.cpp  SimpleNode.hpp  SimpleNode.ut.cpp  TestHelpers.ut.hpp  Type.hpp  findParent.cpp  findParent.hpp
src/LogATE/Tree/Filter/: AcceptAll.cpp  AcceptAll.hpp  BinarySplit.cpp  BinarySplit.hpp  BinarySplit.ut.cpp  Explode.cpp  Explode.hpp  Explode.ut.cpp  From.hpp  Grep.cpp  Grep.hpp  Grep.ut.cpp  To.hpp
src/LogATE/Tree/Filter/detail/: jsonSearch.cpp  jsonSearch.hpp  jsonSearch.ut.cpp  matchesLog.cpp  matchesLog.hpp  matchesLog.ut.cpp
src/LogATE/Tree/detail/: LogKeyIndexCache.cpp  LogKeyIndexCache.hpp  LogKeyIndexCache.ut.cpp
src/LogATE/Utils/: PrintableStringConverter.cpp  PrintableStringConverter.hpp  PrintableStringConverter.ut.cpp  WorkerThreads.cpp  WorkerThreads.hpp  WorkerThreads.ut.cpp  forEach.hpp  forEach.ut.cpp  forEachMatch.hpp  forEachMatch.ut.cpp  matchesLog.cpp  matchesLog.hpp  matchesLog.ut.cpp  string2key.cpp  string2key.hpp  string2key.ut.cpp  trimFields.cpp  trimFields.hpp  trimFields.ut.cpp  value2str.cpp  value2str.hpp  zeroPaddedString.cpp  zeroPaddedString.hpp  zeroPaddedString.ut.cpp
src/LogATE/Utils/detail/: MultiQueue.hpp  Task.hpp
src/cmake/flags/: clang.cmake  clang6.cmake  gcc.cmake  gcc7.cmake  gcc8.cmake
src/cmake/toolchains/: clang.cmake  clang6.cmake  gcc.cmake  gcc7.cmake  gcc8.cmake
